/*
  Customer Credit Rating

  This service domain maintains and administers the bank's credit assessment for customers based on consolidated internal data and optionally by referencing external credit agency reports

  The version of the OpenAPI document: 10.0.0

  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package com.redhat.mercury.customercreditrating.v10.api.crcustomercreditratingstateservice;

import "google/protobuf/empty.proto";
import public "v10/model/execute_customer_credit_rating_state_request.proto";
import public "v10/model/execute_customer_credit_rating_state_response.proto";
import public "v10/model/http_error.proto";
import public "v10/model/initiate_customer_credit_rating_state_request.proto";
import public "v10/model/initiate_customer_credit_rating_state_response.proto";
import public "v10/model/request_customer_credit_rating_state_request.proto";
import public "v10/model/request_customer_credit_rating_state_response.proto";
import public "v10/model/retrieve_customer_credit_rating_state_response.proto";

service CRCustomerCreditRatingStateService {
  rpc Execute (ExecuteRequest) returns (ExecuteCustomerCreditRatingStateResponse);

  rpc Initiate (InitiateRequest) returns (InitiateCustomerCreditRatingStateResponse);

  rpc Request (RequestRequest) returns (RequestCustomerCreditRatingStateResponse);

  rpc Retrieve (RetrieveRequest) returns (RetrieveCustomerCreditRatingStateResponse);

}

message ExecuteRequest {
  string customercreditratingId = 1;
  ExecuteCustomerCreditRatingStateRequest executeCustomerCreditRatingStateRequest = 2;

}

message InitiateRequest {
  InitiateCustomerCreditRatingStateRequest initiateCustomerCreditRatingStateRequest = 1;

}

message RequestRequest {
  string customercreditratingId = 1;
  RequestCustomerCreditRatingStateRequest requestCustomerCreditRatingStateRequest = 2;

}

message RetrieveRequest {
  string customercreditratingId = 1;

}

